fixed addthis toolbar on mobile

--- a/less/pages/about.less
+++ b/less/pages/about.less
@@ -1,33 +1,35 @@
 section#about {
   .page {
-    background-color: #f9f5f1;
-    padding: 64px 0 1px;
+	background-color: #f9f5f1;
+	padding: 64px 0 1px;
 
-    .mobile-page
+	.mobile-page
   }
 
   .overview {
-    border-radius: 15px;
-    padding: 15px;
-    color: #999390;
-    line-height: 1.5;
+	border-radius: 15px;
+	padding: 15px;
+	color: #999390;
+	line-height: 1.5;
 
-    @media @desktop {
-      margin-bottom: 60px;
-    }
+	@media @desktop {
+	  margin-bottom: 60px;
+	}
 
-    .addthis_toolbox {
-      position: absolute;
-      right: 20px;
-      top: 35px;
-    }
+	@media @tablet, @desktop {
+	  .addthis_toolbox {
+		position: absolute;
+		right: 20px;
+		top: 35px;
+	  }
+	}
 
-    h3 {
-      color: #666;
-      margin: 10px 0 20px;
-      font-weight: 300;
-      font-size: @bigFontSize;
-    }
+	h3 {
+	  color: #666;
+	  margin: 10px 0 20px;
+	  font-weight: 300;
+	  font-size: @bigFontSize;
+	}
   }
 }
 
